Added Mongo db Atlas for project

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT= 8000
+MONGO_URI=mongodb+srv://taimoor123:taimoor123@cluster0.klw5nnj.mongodb.net/proshop?retryWrites=true&w=majority
