--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Taimoor",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
